# api-saphety-x3

./: .dockerignore  .env.example  .env.exemple  .gitignore  Dockerfile  Dockerfile.windows  README.md  build_package.py  docker-compose.yaml  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_cli.py  run_service.py  run_test.py  service.py  tree_proj
config/: settings.py
core/auth/: auth.py
core/config/: settings.py
core/database/: base.py  database.py  database_core.py  handler.py
core/mappers/: base_mapper.py
core/models/: __init__.py  address.py  business_partner.py  company.py  customer.py  mixins.py  sales_invoice.py  saphety_control.py
core/repositories/: address_repository.py  base_repository.py  company_repository.py  control_api_repository.py  control_repository.py  invoice_repository.py
core/scheduler/: scheduler.py
core/services/: authentication.py  control_service.py  invoice_processor.py  saphety_integration_service.py  saphety_service.py
core/types/: types.py
core/utils/: conversions.py  generics.py  local_menus.py  xml_handler.py
customer_mappers/default/: __init__.py  (+1 more)
database/: base.py  database.py  database_core.py  handler.py
models/: __init__.py  address.py  cius_pt_control.py  company.py  customer.py  mixins.py  partner.py  sales_invoice.py
repositories/: address_repository.py  base_repository.py  company_repository.py  invoice_repository.py  invoices.py
scheduler/: scheduler.py
services/: invoice_processor.py
utils/: conversions.py  generics.py  local_menus.py
(+4 files in other folders)
